--- a/DVLD.Business/DVLD.Business.csproj
+++ b/DVLD.Business/DVLD.Business.csproj
@@ -42,7 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CountryManager.cs" />
+    <Compile Include="PersonManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="EntityValidators\CountryValidator.cs" />
+    <Compile Include="EntityValidators\PersonValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DVLD.Core\DVLD.Core.csproj">
@@ -54,5 +57,6 @@
       <Name>DVLD.Data</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
