--- a/DVLD.Core/DVLD.Core.csproj
+++ b/DVLD.Core/DVLD.Core.csproj
@@ -42,9 +42,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppLogger.cs" />
-    <Compile Include="Entities.cs" />
-    <Compile Include="Exceptions.cs" />
+    <Compile Include="Entities\Country.cs" />
+    <Compile Include="Entities\Person.cs" />
+    <Compile Include="Enums\Enums.cs" />
+    <Compile Include="Exceptions\BusinessException.cs" />
+    <Compile Include="Exceptions\ValidationException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validators\CountryValidator.cs" />
+    <Compile Include="Validators\PersonValidator.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
