--- a/DVLD.Data/DVLD.Data.csproj
+++ b/DVLD.Data/DVLD.Data.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="CountryService.cs" />
     <Compile Include="DataSettings.cs" />
+    <Compile Include="PersonService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
