Add Users backend logic in Core, DAL, BLL

--- a/DVLD.Business/DVLD.Business.csproj
+++ b/DVLD.Business/DVLD.Business.csproj
@@ -42,10 +42,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CountryManager.cs" />
+    <Compile Include="EntityValidators\UserValidator.cs" />
     <Compile Include="PersonManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="EntityValidators\CountryValidator.cs" />
     <Compile Include="EntityValidators\PersonValidator.cs" />
+    <Compile Include="UserManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DVLD.Core\DVLD.Core.csproj">
