--- a/DVLD.Data/DVLD.Data.csproj
+++ b/DVLD.Data/DVLD.Data.csproj
@@ -45,6 +45,7 @@
     <Compile Include="DataSettings.cs" />
     <Compile Include="PersonService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DVLD.Core\DVLD.Core.csproj">
