--- a/DVLD.Core/DVLD.Core.csproj
+++ b/DVLD.Core/DVLD.Core.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Driver.cs" />
     <Compile Include="Logging\AppLogger.cs" />
     <Compile Include="Entities\Country.cs" />
     <Compile Include="Entities\Person.cs" />
@@ -50,6 +51,7 @@
     <Compile Include="Exceptions\ValidationException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validators\CountryValidator.cs" />
+    <Compile Include="Validators\DriverValidator.cs" />
     <Compile Include="Validators\PersonValidator.cs" />
     <Compile Include="Validators\UserValidator.cs" />
   </ItemGroup>
