--- a/DVLD.Core/DVLD.Core.csproj
+++ b/DVLD.Core/DVLD.Core.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\Driver.cs" />
+    <Compile Include="Entities\TestType.cs" />
     <Compile Include="Logging\AppLogger.cs" />
     <Compile Include="Entities\Country.cs" />
     <Compile Include="Entities\Person.cs" />
@@ -53,6 +54,7 @@
     <Compile Include="Validators\CountryValidator.cs" />
     <Compile Include="Validators\DriverValidator.cs" />
     <Compile Include="Validators\PersonValidator.cs" />
+    <Compile Include="Validators\TestTypeValidator.cs" />
     <Compile Include="Validators\UserValidator.cs" />
   </ItemGroup>
   <ItemGroup />
