--- a/DVLD.Data/DVLD.Data.csproj
+++ b/DVLD.Data/DVLD.Data.csproj
@@ -46,6 +46,7 @@
     <Compile Include="DriverService.cs" />
     <Compile Include="PersonService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestTypeService.cs" />
     <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
