--- a/DVLD.Data/DVLD.Data.csproj
+++ b/DVLD.Data/DVLD.Data.csproj
@@ -41,13 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CountryService.cs" />
+    <Compile Include="CountryData.cs" />
     <Compile Include="DataSettings.cs" />
-    <Compile Include="DriverService.cs" />
-    <Compile Include="PersonService.cs" />
+    <Compile Include="DriverData.cs" />
+    <Compile Include="PersonData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestTypeService.cs" />
-    <Compile Include="UserService.cs" />
+    <Compile Include="TestTypeData.cs" />
+    <Compile Include="UserData.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DVLD.Core\DVLD.Core.csproj">
