--- a/DVLD.Core/DVLD.Core.csproj
+++ b/DVLD.Core/DVLD.Core.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTOs\Entities\ApplicationType.cs" />
     <Compile Include="DTOs\Entities\Driver.cs" />
     <Compile Include="DTOs\Entities\TestType.cs" />
     <Compile Include="Logging\AppLogger.cs" />
@@ -51,6 +52,7 @@
     <Compile Include="Exceptions\BusinessException.cs" />
     <Compile Include="Exceptions\ValidationException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validators\ApplicationTypeValidator.cs" />
     <Compile Include="Validators\CountryValidator.cs" />
     <Compile Include="Validators\DriverValidator.cs" />
     <Compile Include="Validators\PersonValidator.cs" />
