Create core and business validators for License fixes #11

--- a/DVLD.Business/DVLD.Business.csproj
+++ b/DVLD.Business/DVLD.Business.csproj
@@ -44,8 +44,8 @@
     <Compile Include="ApplicationTypeBusiness.cs" />
     <Compile Include="CountryBusiness.cs" />
     <Compile Include="DriverBusiness.cs" />
-    <Compile Include="EntityValidators\ApplicationTypeValidator.cs" />
     <Compile Include="EntityValidators\DriverValidator.cs" />
+    <Compile Include="EntityValidators\LicenseValidator.cs" />
     <Compile Include="EntityValidators\TestTypeValidator.cs" />
     <Compile Include="EntityValidators\UserValidator.cs" />
     <Compile Include="PersonBusiness.cs" />
