--- a/DVLD.Core/DVLD.Core.csproj
+++ b/DVLD.Core/DVLD.Core.csproj
@@ -41,7 +41,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DTOs\Entities\ApplicationType.cs" />
     <Compile Include="DTOs\Entities\Driver.cs" />
     <Compile Include="DTOs\Entities\License.cs" />
     <Compile Include="DTOs\Entities\TestType.cs" />
@@ -53,9 +52,9 @@
     <Compile Include="Exceptions\BusinessException.cs" />
     <Compile Include="Exceptions\ValidationException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Validators\ApplicationTypeValidator.cs" />
     <Compile Include="Validators\CountryValidator.cs" />
     <Compile Include="Validators\DriverValidator.cs" />
+    <Compile Include="Validators\LicenseValidator.cs" />
     <Compile Include="Validators\PersonValidator.cs" />
     <Compile Include="Validators\TestTypeValidator.cs" />
     <Compile Include="Validators\UserValidator.cs" />
