--- a/DVLD.Business/DVLD.Business.csproj
+++ b/DVLD.Business/DVLD.Business.csproj
@@ -48,6 +48,8 @@
     <Compile Include="EntityValidators\LicenseValidator.cs" />
     <Compile Include="EntityValidators\TestTypeValidator.cs" />
     <Compile Include="EntityValidators\UserValidator.cs" />
+    <Compile Include="LicenseBusiness.cs" />
+    <Compile Include="LicenseClassBusiness.cs" />
     <Compile Include="PersonBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="EntityValidators\CountryValidator.cs" />
